avoid flickering of shadow while resizing
Because we snap to 15 minutes, the mouse may not hover the scheduling
when decreasing start time by resizing.

--- a/app/assets/stylesheets/calendar/_hours.css.sass
+++ b/app/assets/stylesheets/calendar/_hours.css.sass
@@ -60,6 +60,7 @@ table.hours-in-week
           width: $ew - 2%
 
       &.focus,
+      &.ui-resizable-resizing,
       &:focus,
       &:hover
         box-shadow: black 0px 0px 20px 1px
